# ananke

./: CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  justfile  shell.nix
.github/workflows/: ci.yml  release.yml
ananke/: Cargo.toml  build.rs
ananke-api/: Cargo.toml
ananke-api/src/: config.rs  defaults.rs  devices.rs  errors.rs  events.rs  lib.rs  lifecycle.rs  logs.rs  metadata.rs  metrics.rs  oneshot.rs  services.rs
ananke-api/tests/: roundtrip.rs
ananke-config/: Cargo.toml
ananke-config/src/: defaults.rs  docs.rs  flags.rs  lib.rs
ananke/examples/: dump-gguf.rs  dump-openapi.rs  estimate.rs
ananke/src/: lib.rs  main.rs
ananke/src/allocator/: balloon.rs  eviction.rs  mod.rs  placement.rs
ananke/src/api/: errors.rs  frontend.rs  mod.rs  openapi.rs  prometheus.rs  proxy.rs
ananke/src/api/management/: config.rs  events_ws.rs  handlers.rs  info.rs  lifecycle.rs  logs.rs  logs_ws.rs  metrics.rs  mod.rs
ananke/src/api/openai/: errors.rs  handlers.rs  metrics.rs  mod.rs  schema.rs  stall.rs  unimplemented.rs
ananke/src/config/: manager.rs  merge.rs  mod.rs  parse.rs  validate.rs
ananke/src/daemon/: app_state.rs  estimate_cache.rs  events.rs  mod.rs
ananke/src/db/: logs.rs  migrations.rs  mod.rs  models.rs  pragma.rs  retention.rs
ananke/src/db/migrations/: 0001_initial_schema.sql  0002_metrics.sql  0003_engine_timings.sql  0004_prompt_eval_tokens.sql
ananke/src/devices/: cpu.rs  cuda_env.rs  mod.rs  nvml.rs  snapshotter.rs
ananke/src/estimator/: compute_buffer.rs  fallback.rs  hybrid.rs  kv.rs  llama.rs  mamba.rs  mod.rs  moe.rs  mtp.rs  override_tensor.rs  types.rs
ananke/src/gguf/: mod.rs  reader.rs  shards.rs  types.rs
ananke/src/oneshot/: handlers.rs  mod.rs  spawn.rs  ttl.rs
ananke/src/supervise/: drain.rs  genstall.rs  health.rs  logs.rs  mod.rs  orphans.rs  persistent_watcher.rs  preview.rs  provision.rs  reconciler.rs  registry.rs  spawn.rs  state.rs
ananke/src/system/: fs.rs  mod.rs  proc.rs  process.rs
ananke/src/templates/: mod.rs  placeholders.rs
ananke/src/tracking/: activity.rs  inflight.rs  mod.rs  observation.rs  progress.rs  rolling.rs  sampler.rs
ananke/tests/: allocator_insufficient_vram.rs  auto_restart_error_rate.rs  auto_restart_generation_stall.rs  auto_restart_periodic.rs  auto_restart_ttft_stall.rs  balloon_contention_resolver.rs  balloon_detect_growth.rs  balloon_pledge_tracks_observed.rs  cold_start_does_not_drain_on_entry.rs  command_template_echo.rs  command_template_picks_free_gpu.rs  config_reload_drains_removed_service.rs  config_reload_spawns_added_service.rs  config_reload_updates_spawn_args.rs  daemon_end_to_end.rs  drain_respects_inflight.rs  drain_sigkills_on_timeout.rs  dynamic_allocation_min_max.rs  dynamic_service_is_evictable_when_busy.rs  ensure_queues_behind_busy_peer.rs  env_inheritance.rs  estimate_cache_warmed_by_spawn.rs  estimator_fallback.rs  estimator_llama.rs  estimator_moe.rs  events_ws.rs  gpu_scaling.rs  idle_eviction_same_priority.rs  idle_timeout_returns_to_idle.rs  logs_ws.rs  management_config.rs  management_devices.rs  management_elastic_borrower_tag.rs  management_lifecycle.rs  management_logs.rs  management_services.rs  mmproj_attribution.rs  multi_gpu_split.rs  no_placement_override_ok.rs  ondemand_start.rs  (+23 more)
ananke/tests/common/: echo_server.rs  mod.rs
ananke/tests/manual/: phase-1-smoke.md  phase-2-smoke.md
anankectl/: Cargo.toml
anankectl/src/: client.rs  config.rs  main.rs  output.rs
anankectl/src/commands/: chat.rs  config.rs  devices.rs  lifecycle.rs  logs.rs  mod.rs  oneshot.rs  picker.rs  server_config.rs  services.rs  show.rs  status.rs  tui.rs
anankectl/tests/: config_cycle.rs  smoke.rs
docs/: api.md  configuration.md  frontend_v2.md  spec.md
examples/: dump-gguf.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  util.ts
frontend2/: package-lock.json  package.json  vite.config.ts
frontend2/src/: App.tsx  index.css  main.tsx  util.ts
scripts/stress/: .gitignore  README.md  analyze_calibration.py  calibrate.py  example-matrix.toml  lib.py  pyproject.toml
scripts/xtask/: Cargo.toml
scripts/xtask/src/: main.rs  release.rs
scripts/xtask/src/gen_api_docs/: mod.rs  render.rs  ts.rs
scripts/xtask/src/gen_api_docs/prose/: errors.md  events_ws.md  frontend.md  logs_ws.md  management_api.md  openai_api.md  openapi_spec.md  overview.md  per_service_proxy.md  prometheus.md  service_states.md
scripts/xtask/src/gen_config_docs/: mod.rs  render.rs
scripts/xtask/src/gen_config_docs/prose/: auto_restart.md  auto_restart_error_rate.md  auto_restart_footer.md  auto_restart_generation_stall.md  auto_restart_periodic.md  auto_restart_ttft_stall.md  command.md  daemon.md  defaults.md  devices.md  estimation.md  filters.md  health.md  inheritance.md  llama_cpp.md  metadata.md  openai_api.md  openai_proxy.md  overview.md  resource_allocation.md  sampling.md  service_common.md  service_lifecycle.md  service_placement.md  tracking.md
src/: activity.rs  allocator.rs  app_state.rs  balloon.rs  daemon.rs  drain.rs  errors.rs  eviction.rs  inflight.rs  lib.rs  main.rs  observation.rs  openapi.rs  placement.rs  proxy.rs  retention.rs  rolling.rs  service_registry.rs  signals.rs  snapshotter.rs  state.rs
tests/: allocator_insufficient_vram.rs  balloon_detect_growth.rs  command_template_echo.rs  daemon_end_to_end.rs  drain_respects_inflight.rs  drain_sigkills_on_timeout.rs  dynamic_allocation_min_max.rs  estimator_llama.rs  idle_timeout_returns_to_idle.rs  management_devices.rs  management_elastic_borrower_tag.rs  management_services.rs  mmproj_attribution.rs  multi_gpu_split.rs  no_placement_override_ok.rs  ondemand_start.rs  oom_retry.rs  openai_chat_routing.rs  openai_models.rs  openai_unimplemented.rs  openapi_json.rs  orphan_recovery.rs  override_tensor_moe_hybrid.rs  persistent_evictable_by_higher.rs  placement_override_bypass.rs  priority_eviction_low_prio_loses.rs  rolling_correction_warns.rs  sse_passthrough.rs  start_coalescing.rs  start_queue_full.rs
(+206 files in other folders)
