[package]
name = "ananke"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ananke"
path = "src/main.rs"

[lib]
name = "ananke"
path = "src/lib.rs"

[dependencies]
ananke-api.workspace = true

tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true

utoipa.workspace = true
utoipa-axum.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
smol_str.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
base64.workspace = true
notify.workspace = true
sha2.workspace = true
ulid.workspace = true
async-trait.workspace = true
pin-project-lite.workspace = true
futures.workspace = true
regex.workspace = true
libc.workspace = true

nvml-wrapper.workspace = true
nix.workspace = true

rusqlite.workspace = true

[dev-dependencies]
proptest.workspace = true
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream.workspace = true
futures.workspace = true
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }

[features]
default = []
test-fakes = []
