[package]
name = "anankectl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anankectl"
path = "src/main.rs"

[dependencies]
ananke-api.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
smol_str.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
ratatui = "0.29"
crossterm = "0.29"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
